--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,10 +34,6 @@ body {
     background-color: rgb(22, 32, 49);
 }
 
-.bg-warn {
-    background-color: rgb(255, 200, 97);
-}
-
 .fs-05 {
     font-size: 0.75em;
 }
@@ -428,6 +424,15 @@ input.border-warn {
 
 input.border-valid {
     border: 5px solid rgb(24, 106, 145);
+}
+
+
+.bg-valid {
+    background-color: rgb(24, 106, 145);
+}
+
+.bg-warn {
+    background-color: rgb(255, 200, 97);
 }
 
 /***** SCROLLBAR GENERAL *****/
